Several updates to the contact UI.

--- a/src/main/resources/MessagesBundle_en_US.properties
+++ b/src/main/resources/MessagesBundle_en_US.properties
@@ -4,3 +4,18 @@ hello=Ol\u00e1 Mundo
 # Resources for IPC extension
 received_object=Objeto recebido {0}
 message_received=Mensagem recebida {0}
+
+# Resources for the Contacts extension
+full_name_label=Full name: 
+first_name_label=First name: 
+last_name_label=Last name: 
+
+confirm_button=Confirm
+cancel_button=Cancel
+
+status_please_enter_data_for_new_contcat=Please enter data for the new contact...
+status_please_confirm_contact_to_delete=Please confirm if this is the contact you wish to delete...
+status_please_update_data_of_contcat=Please update the data of the contact...
+status_data_concurrency_error=Data Concurrency Error. Please try again or Cancel.
+status_data_integrity_error=Data Integrity Error. Please try again or Cancel.
+
