--- a/src/main/resources/MessagesBundle_pt_PT.properties
+++ b/src/main/resources/MessagesBundle_pt_PT.properties
@@ -4,3 +4,17 @@ hello=Hello World
 # Resources for IPC extension
 received_object=Received object {0}
 message_received=Message received {0}
+
+# Resources for the Contacts extension
+full_name_label=Nome completo: 
+first_name_label=Primeiro nome: 
+last_name_label=\u00daltimo nome: 
+
+confirm_button=Confirmar
+cancel_button=Cancelar
+
+status_please_enter_data_for_new_contcat=Please enter data for the new contact...
+status_please_confirm_contact_to_delete=Please confirm if this is the contact you wish to delete...
+status_please_update_data_of_contcat=Please update the data of the contact...
+status_data_concurrency_error=Data Concurrency Error. Please try again or Cancel.
+status_data_integrity_error=Data Integrity Error. Please try again or Cancel.
